===================================

Incompatible changes
--------------------

Features added
--------------
* #2308: Define ``\tablecontinued`` macro to redefine the style of continued label for
  longtables.

Bugs fixed
----------
* Remove ``image/gif`` from supported_image_types of LaTeX writer (#2272)
* Fix code-block literals raises highlighting warnings by default

Documentation
-------------

Release 1.4 alpha1 (released Feb 14, 2016)
==========================================

Incompatible changes
--------------------

* Drop ``PorterStemmer`` package support. Use ``PyStemmer`` instead of ``PorterStemmer``
  to accelerate stemming.
* sphinx_rtd_theme has become optional. Please install it manually.
  Refs #2087, #2086, #1845 and #2097. Thanks to Victor Zverovich.
* #2231: Use DUrole instead of DUspan for custom roles in LaTeX writer. It enables to take
  title of roles as an argument of custom macros.
* #2022: 'Thumbs.db' and '.DS_Store' are added to `exclude_patterns` default values in
  conf.py that will be provided on sphinx-quickstart.
* #2027, #2208: The ``html_title`` accepts string values only. And The None value cannot be
  accepted.
* ``sphinx.ext.graphviz``: show graph image in inline by default
* #2060, #2224: The ``manpage`` role now generate ``sphinx.addnodes.manpage`` node instead
  of ``sphinx.addnodes.literal_emphasis`` node.
* #2022: :confval:`html_extra_path` also copies dotfiles in the extra directory, and
  refers to :confval:`exclude_patterns` to exclude extra files and directories.
* #2300: enhance autoclass:: to use the docstring of __new__ if __init__ method's is missing
  of empty
* #2251: Previously, under glossary directives, multiple terms for one definition are
  converted into single ``term`` node and the each terms in the term node are separated
  by ``termsep`` node. In new implementation, each terms are converted into individual
  ``term`` nodes and ``termsep`` node is removed.