@@ -170,13 +170,16 @@ def test_format_date():
 
     format = None
     assert i18n.format_date(format, date=date) == 'Feb 7, 2016'
+    assert i18n.format_date(format, date=date, language='') == 'Feb 7, 2016'
+    assert i18n.format_date(format, date=date, language='unknown') == 'Feb 7, 2016'
     assert i18n.format_date(format, date=date, language='en') == 'Feb 7, 2016'
     assert i18n.format_date(format, date=date, language='ja') == '2016/02/07'
     assert i18n.format_date(format, date=date, language='de') == '07.02.2016'
 
     format = '%B %d, %Y'
-    print(i18n.format_date(format, date=date))
     assert i18n.format_date(format, date=date) == 'February 07, 2016'
+    assert i18n.format_date(format, date=date, language='') == 'February 07, 2016'
+    assert i18n.format_date(format, date=date, language='unknown') == 'February 07, 2016'
     assert i18n.format_date(format, date=date, language='en') == 'February 07, 2016'
     assert i18n.format_date(format, date=date, language='ja') == u'2月 07, 2016'
     assert i18n.format_date(format, date=date, language='de') == 'Februar 07, 2016'
