@@ -13,6 +13,7 @@ Bugs fixed
 ----------
 * Remove ``image/gif`` from supported_image_types of LaTeX writer (#2272)
 * Fix code-block literals raises highlighting warnings by default
+* Fix ValueError is raised if LANGUAGE is empty string
 
 Documentation
 -------------
